--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "svelte-app",
+  "name": "obs-web",
   "version": "1.0.0",
   "scripts": {
     "build": "rollup -c --bundleConfigAsCjs",
